Update README and add configuration files for PostgreSQL and Horustech services. Introduced options for managing secrets with and without SOPS, and created common values files for shared configurations.

--- a/stores/atlasposlitepilot/secrets.sops.yaml.example
+++ b/stores/atlasposlitepilot/secrets.sops.yaml.example
@@ -1,12 +1,16 @@
-# Ejemplo de archivo de secretos encriptado con SOPS
+# Ejemplo de archivo de secretos
 # Tienda: aspdemoshorustech
-# Este archivo debe ser encriptado antes de commitearse
 # 
-# Para encriptar:
-#   sops -e -i secrets.sops.yaml
+# Opción 1: Usar directamente como secrets.yaml (sin encriptar - RECOMENDADO)
+#   - Renombrar este archivo a secrets.yaml
+#   - Editar los valores directamente
+#   - Fleet lo leerá automáticamente
 #
-# Para desencriptar y editar:
-#   sops secrets.sops.yaml
+# Opción 2: Usar con SOPS (opcional - solo si necesitas encriptación)
+#   - Renombrar a secrets.sops.yaml
+#   - Editar: sops secrets.sops.yaml
+#   - Encriptar: sops -e -i secrets.sops.yaml
+#   - Nota: Fleet NO desencripta SOPS automáticamente
 
 # Secretos para PostgreSQL
 postgresql:
