--- a/stores/atlasposlitepilot/secrets.yaml
+++ b/stores/atlasposlitepilot/secrets.yaml
@@ -40,4 +40,4 @@ cloudflared:
 # Azure Container Registry
 acr:
   username: "aspposlite"
-  password: ""  # CONFIGURAR: Password del ACR
+  password: "qoHaBxP0RGUn52xjIWvc8Gy3t3VwCBmIa7YbKpXZeK+ACRCWH6AD"  # CONFIGURAR: Password del ACR
