Update pgadmin password in secrets.yaml for PostgreSQL configuration

--- a/stores/atlasposlitepilot/secrets.yaml
+++ b/stores/atlasposlitepilot/secrets.yaml
@@ -9,7 +9,7 @@
 # Secretos para PostgreSQL
 postgresql:
   password: "z@a?ALGm^=u6[8f]Ks5]"  # CONFIGURAR: Cambiar por password real
-  pgadmin-password: "admin"  # CONFIGURAR: Cambiar por password real
+  pgadmin-password: "admin1234+"  # CONFIGURAR: Cambiar por password real
 
 # Cadena de conexión a base de datos
 db-connection-string: "Host=poslite-postgres-db;Database=poslite;Username=sa;Password=z@a?ALGm^=u6[8f]Ks5];Trust Server Certificate=true;Include Error Detail=true;"  # CONFIGURAR: Actualizar password
