--- a/stores/atlasposlitepilot/values-horustech.yaml
+++ b/stores/atlasposlitepilot/values-horustech.yaml
@@ -45,6 +45,7 @@ config:
   horustechPortWorkers: "1771"  # Puerto Workers - CONFIGURAR
   horustechTanksIp: ""  # IP para tanques (opcional)
   horustechTlsPort: 10002
+  horustechTlsPort2: 10001
 
 # Workers
 workers:
