Disable pgAdmin in values-db.yaml for atlasposlitepilot to streamline database configuration

--- a/stores/atlasposlitepilot/values-db.yaml
+++ b/stores/atlasposlitepilot/values-db.yaml
@@ -10,7 +10,7 @@ postgresql:
   shmSize: "128mb"
 
 pgadmin:
-  enabled: true
+  enabled: false
   defaultEmail: admin@admin.com
   defaultPassword: ""  # Se debe proporcionar vía Secret
 
