Update values-db.yaml and values-horustech.yaml for atlasposlitepilot configuration, enabling pgAdmin and correcting store name references.

--- a/stores/atlasposlitepilot/secrets.yaml
+++ b/stores/atlasposlitepilot/secrets.yaml
@@ -1,5 +1,5 @@
 # Ejemplo de archivo de secretos
-# Tienda: aspdemoshorustech
+# Tienda: atlasposlitepilot
 # 
 # Opción 1: Usar directamente como secrets.yaml (sin encriptar - RECOMENDADO)
 #   - Renombrar este archivo a secrets.yaml
