--- a/stores/atlasposlitepilot/values-common.yaml
+++ b/stores/atlasposlitepilot/values-common.yaml
@@ -1,5 +1,5 @@
 # Configuración común para todos los servicios
-# Tienda: aspdemoshorustech
+# Tienda: atlasposlitepilot
 # Este archivo contiene valores compartidos entre todos los charts
 
 global:
