--- a/stores/atlasposlitepilot/values-horustech.yaml
+++ b/stores/atlasposlitepilot/values-horustech.yaml
@@ -1,5 +1,5 @@
 # Configuración específica para Horustech
-# Tienda: aspdemoshorustech
+# Tienda: atlasposlitepilot
 # Este archivo se usa con el chart poslite-horustech
 
 # Configuración de imágenes
