Comment out PostgreSQL password in secrets.yaml for atlasposlitepilot to indicate it should be replaced with a real password.

--- a/stores/atlasposlitepilot/secrets.yaml
+++ b/stores/atlasposlitepilot/secrets.yaml
@@ -7,7 +7,7 @@
 
 # Secretos para PostgreSQL
 postgresql:
-  password: "z@a?ALGm^=u6[8f]Ks5]"  # CONFIGURAR: Cambiar por password real
+  ##password: "z@a?ALGm^=u6[8f]Ks5]"  # CONFIGURAR: Cambiar por password real
   pgadmin-password: "admin"  # CONFIGURAR: Cambiar por password real
 
 # Cadena de conexión a base de datos
