Update PostgreSQL password in secrets.yaml and values-db.yaml for atlasposlitepilot configuration

--- a/stores/atlasposlitepilot/values-db.yaml
+++ b/stores/atlasposlitepilot/values-db.yaml
@@ -4,7 +4,7 @@
 
 postgresql:
   user: sa
-  password: ""  # Se debe proporcionar vía Secret
+  password: "z@a?ALGm^=u6[8f]Ks5]"  # Se debe proporcionar vía Secret
   database: poslite
   timezone: "America/Panama"
   shmSize: "128mb"
