--- a/groups/core/fleet.yaml
+++ b/groups/core/fleet.yaml
@@ -1,28 +1,32 @@
-# Grupo de despliegue: Wave 2
-# Segunda ola de migración
+# Grupo de despliegue: Core
+# Despliega: Core + BD + Cloudflared
+# Para tiendas que solo necesitan Core (sin Horustech ni PAM)
+#
+# NOTA: Este grupo es un template genérico. Para cada tienda, crea un bundle específico
+# en stores/<nombre-tienda>/fleet.yaml que referencia sus propios archivos de valores.
+#
+# Este archivo puede usarse como fallback o para configuraciones globales de Core.
 
 defaultNamespace: poslite
 
 targetCustomizations:
-- name: wave2-stores
+- name: core-db
   clusterSelector:
     matchLabels:
       atlas: "true"
-      wave: "wave2"
+      poslite: "core"  # Solo clusters con label poslite: "core"
   helm:
     chart: oci://atlashelmrepo.azurecr.io/helm/poslite-db
     version: 1.0.0
     values:
-      postgresql:
-        timezone: "America/Panama"
       persistence:
         storageClass: local-path
 
-- name: wave2-core
+- name: core-app
   clusterSelector:
     matchLabels:
       atlas: "true"
-      wave: "wave2"
+      poslite: "core"
   helm:
     chart: oci://atlashelmrepo.azurecr.io/helm/poslite-core
     version: 1.0.0
@@ -32,11 +36,11 @@ targetCustomizations:
       webapi:
         enabled: true
 
-- name: wave2-cloudflared
+- name: core-cloudflared
   clusterSelector:
     matchLabels:
       atlas: "true"
-      wave: "wave2"
+      poslite: "core"
   helm:
     chart: oci://atlashelmrepo.azurecr.io/helm/poslite-cloudflared
     version: 1.0.0
