--- a/stores/ejemplo-tienda-pam/secrets.sops.yaml.example
+++ b/stores/ejemplo-tienda-pam/secrets.sops.yaml.example
@@ -24,7 +24,7 @@ smtp:
   password: "asp1234+"
   to: "mgamboa@asptg.com"
 
-# Configuración PAM (si aplica)
+# Configuración PAM
 pam:
   password: ""
 
