--- a/stores/aspdemoshorustech/values-db.yaml
+++ b/stores/aspdemoshorustech/values-db.yaml
@@ -3,7 +3,7 @@
 
 postgresql:
   user: sa
-  password: ""  # Se debe proporcionar vía Secret
+  password: "z@a?ALGm^=u6[8f]Ks5]"  # Se debe proporcionar vía Secret
   database: poslite
   timezone: "America/Panama"
   shmSize: "128mb"
@@ -11,7 +11,7 @@ postgresql:
 pgadmin:
   enabled: true
   defaultEmail: admin@admin.com
-  defaultPassword: ""  # Se debe proporcionar vía Secret
+  defaultPassword: "admin"  # Se debe proporcionar vía Secret
 
 persistence:
   enabled: true
