Update README.md to clarify store naming conventions and remove the obsolete 'horustech' directory. The chart for Horustech is now named 'horus' to comply with Kubernetes naming limits. This change enhances clarity and organization in the repository.

--- a/stores/posdemos/horus/fleet.yaml
+++ b/stores/posdemos/horus/fleet.yaml
@@ -1,6 +1,6 @@
 defaultNamespace: poslite
 targetCustomizations:
-- name: horustech
+- name: horus
   clusterSelector:
     matchLabels:
       atlas: "true"
