Update secret.yaml to clarify ACR secret configuration by removing the base64 requirement for username and password, enhancing usability for image pulling.

--- a/stores/posdemos/acr-secret/secret.yaml
+++ b/stores/posdemos/acr-secret/secret.yaml
@@ -1,5 +1,5 @@
 # Secret para pull de imágenes desde aspposlite.azurecr.io
-# Sustituir ACR_USERNAME, ACR_PASSWORD y AUTH_BASE64 (base64 de "user:pass") antes de commit.
+# Solo username y password; no hace falta base64.
 apiVersion: v1
 kind: Secret
 metadata:
@@ -12,8 +12,7 @@ stringData:
       "auths": {
         "aspposlite.azurecr.io": {
           "username": "aspposlite",
-          "password": "qoHaBxP0RGUn52xjIWvc8Gy3t3VwCBmIa7YbKpXZeK+ACRCWH6AD",
-          "auth": "AUTH_BASE64"
+          "password": "qoHaBxP0RGUn52xjIWvc8Gy3t3VwCBmIa7YbKpXZeK+ACRCWH6AD"
         }
       }
     }
