Add fullnameOverride to fleet.yaml for cloudflared, db, and horus services to enhance naming clarity

--- a/stores/posdemos/cloudflared-horustech/fleet.yaml
+++ b/stores/posdemos/cloudflared-horustech/fleet.yaml
@@ -9,6 +9,7 @@ targetCustomizations:
     chart: oci://atlashelmrepo.azurecr.io/helm/poslite-cloudflared-horustech
     version: 1.0.0
     values:
+      fullnameOverride: "horustech-cloudflared"
       replicas: 1
       hostNetwork: true
       config:
