--- a/stores/posdemos/db/fleet.yaml
+++ b/stores/posdemos/db/fleet.yaml
@@ -9,6 +9,7 @@ targetCustomizations:
     chart: oci://atlashelmrepo.azurecr.io/helm/poslite-db
     version: 1.0.0
     values:
+      fullnameOverride: "poslite-db"
       postgresql:
         timezone: "America/Panama"
         database: poslite
