Update fleet.yaml to set image tag to "unstable", enhancing version control for deployment.

--- a/stores/posdemos/horus/fleet.yaml
+++ b/stores/posdemos/horus/fleet.yaml
@@ -10,6 +10,8 @@ targetCustomizations:
     version: 1.0.0
     values:
       fullnameOverride: "horustech"
+      image:
+        tag: "unstable"
       guardApi:
         enabled: true
       portal:
