--- a/stores/posdemos/cloudflared-horustech/fleet.yaml
+++ b/stores/posdemos/cloudflared-horustech/fleet.yaml
@@ -9,7 +9,7 @@ targetCustomizations:
     chart: oci://atlashelmrepo.azurecr.io/helm/poslite-cloudflared-horustech
     version: 1.0.0
     values:
-      fullnameOverride: "horustech-cloudflared"
+      nameOverride: "horustech-cloudflared"
       replicas: 1
       hostNetwork: true
       config:
